# uberdemotools

./: CMakeLists.txt  README.md  changelog_dll.txt  changelog_gui.txt
.github/workflows/: build.yaml
UDT_DLL/include/: uberdemotools.h
UDT_DLL/premake/: premake5.lua
UDT_DLL/premake/helpers/: vs_build_selector.cmd  vs_express_selector.cmd  vs_version_selector.cmd
UDT_DLL/src/: analysis_captures.cpp  analysis_general.cpp  analysis_general.hpp  analysis_obituaries.cpp  analysis_pattern_chat.cpp  analysis_pattern_flick_rail.cpp  analysis_pattern_mid_air.cpp  analysis_pattern_multi_rail.cpp  api.cpp  api_arg_checks.hpp  api_helpers.cpp  common.hpp  context.cpp  context.hpp  converter_entity_timer_shifter.cpp  json_export.cpp  look_up_tables.cpp  message.cpp  message.hpp  parser.cpp  parser.hpp  plug_in_chat.cpp  plug_in_chat.hpp  plug_in_scores.cpp  plug_in_stats.cpp  plug_in_stats.hpp  protocol_conversion.cpp  protocol_conversion.hpp  string.cpp  threads.cpp  utils.cpp  utils.hpp
UDT_DLL/src/apps/: app_demo_converter.cpp  app_demo_cutter.cpp  app_demo_json.cpp  tut_multi_rail.cpp
UDT_DLL/src/viewer/: demo.cpp
UDT_GUI/src/: App.cs  AppFlagCaptureCut.cs  AppFlickRailCut.cs  AppFragCut.cs  AppMidAirCut.cs  AppMultiRailCut.cs  AppPatterns.cs  AppScores.cs  AppStats.cs  UDT.cs
demo_files/dm_84/: scores_test.dm_84
demo_files/tv_84/: demo01_legacy.tv_84
viewer_data/: map_aliases.txt
